# technologic

./: .env  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.ts
.github/workflows/: publish.yml
src/: app.html  app.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/lib/: CodeRenderer.svelte  Folder.svelte  Menu.svelte  MessageCard.svelte  OpenAI.ts
src/lib/backend/: Anthropic.ts  BackendFactory.ts  OpenAI.ts  types.ts
src/lib/components/: CodeRenderer.svelte  ConversationGraph.svelte  EditableString.svelte  Folder.svelte  Menu.svelte  MessageCard.svelte  SubMenu.svelte  dialogs.ts
src/lib/stores/: allMessageStore.ts  configStore.ts  conversationStore.ts  folderStore.ts  schema.ts  technologicStore.ts  technologicStores.ts  utils.ts
src/lib/tools/: index.ts  types.ts
src/lib/translations/: index.ts  translations.ts  util.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/[conversationId]/: +page.svelte  conversationBroker.ts
src/routes/settings/backends/: +page.svelte
src/routes/settings/backends/[backendName]/: +page.svelte
src/routes/settings/backends/new/: +page.svelte
src/routes/settings/backup/: +page.svelte
src/routes/settings/tools/: +page.svelte
src/routes/settings/tools/[toolName]/: +page.svelte
